整体框架的搭建

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>home</title>
+    <title>儿童丢失信息平台</title>
+    <style>
+      html,body,#app,.el-container{
+        /*设置内部填充为0，几个布局元素之间没有间距*/
+        padding: 0;
+        /*外部间距也是如此设置*/
+        margin: 0;
+        /*统一设置高度为100%*/
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
